# sync-tex

./: .env.example  .gitignore  README.md  docker-compose.yml
collab-server/: Dockerfile  go.mod  main.go
collab-service/: .air.toml  Cargo.toml  Dockerfile.dev  go.mod
collab-service/cmd/server/: main.go
collab-service/internal/auth/: access.go  jwt.go
collab-service/internal/client/: client.go  pumps.go
collab-service/internal/config/: config.go
collab-service/internal/handler/: route.go  ws.go
collab-service/internal/hub/: broadcast.go  hub.go
collab-service/internal/persist/: seed.go  upload.go
collab-service/internal/save/: debounce.go  signal.go
collab-service/internal/yjs/: encode.go  message.go
collab-service/src/: config.rs  error.rs  main.rs  state.rs
collab-service/src/doc/: doc_state.rs  mod.rs  registry.rs
collab-service/src/projects/: client.rs
collab-service/src/upload/: scheduler.rs
collab-service/src/ws/: handler.rs
collab-service/src/yjs/: engine.rs
docs/: projects-service-api.html
docs/collab-service/: asyncapi.yaml
docs/projects-service/: openapi.yaml
file-data-service/: Cargo.toml  Dockerfile.dev  build.rs
file-data-service/src/: compaction.rs  config.rs  export.rs  http.rs  main.rs  proto.rs  server.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: collaborators.js  editor.js  projects.js  session.js
frontend/src/components/: ProtectedRoute.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/monaco/: textmateHighlighter.js
frontend/src/views/: DashboardView.css  DashboardView.jsx  EditorView.css  EditorView.jsx  JoinView.jsx  LoginView.css  LoginView.jsx  OAuthCallback.jsx
nginx/: nginx.conf
nginx/conf.d/: default.conf
projects-service/: .air.toml  Dockerfile  Dockerfile.dev  Makefile  go.mod  go.sum  sqlc.yaml
projects-service/cmd/server/: main.go
projects-service/db/migrations/: 000005_create_file_type_enum.down.sql  000005_create_file_type_enum.up.sql  000006_add_indexes.down.sql  000006_add_indexes.up.sql  000007_create_project_invites_table.down.sql  000007_create_project_invites_table.up.sql  20260317060826_create_projects_table.up.sql  20260317061144_create_project_collaborators_table.down.sql  (+3 more)
proto/: compaction.proto
users-service/: Dockerfile  handlers.py  main.py  models.py  requirements.txt  schemas.py  security.py
(+46 files in other folders)
